# test-octossazza-data-product

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  initialise.py
.github/: CODEOWNERS
.github/chainguard/: configure-repo.sts.yaml
.github/workflows/: access.yml  build_artefacts.yml  create-repo.yml  deploy.yml  release.yml  test.yml
data-transformation/: README.md  pyproject.toml
data-transformation/test_octossazza/ingest/: main.py
data-transformation/tests/: test_common_spark.py  test_ingest_main.py
infrastructure/: root.hcl
infrastructure/environments/: common.hcl
infrastructure/terraform/core/: main.tf  variables.tf
infrastructure/terraform/data_access/: main.tf  variables.tf
orchestration/: README.md
orchestration/marketing/test_octossazza/: test_octossazza_dag.py
orchestration/tests/: conftest.py  test_test_octossazza_dag.py
