[tool.poetry]
name = "test_octossazza"
version = "0.0.0"
description = "TODO: Short description about what the pipeline does"
authors = ["team <team@itv.com>"]

[[tool.poetry.source]]
name = "artifact-registry"
url = "https://europe-west2-python.pkg.dev/itv-data-platformconfig-prd/python/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.12.3,<3.13.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = "^7.0.3"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pyspark = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "test_octossazza",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest = 'test_octossazza.ingest.main:main'
